# composer-trade-py

./: .gitignore  .pre-commit-config.yaml  32fbf919-f2a9-40f1-9c2d-83eaf4fac3fc.py  404.html  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  d85d1d87-696e-4c5c-9487-ce417e20f1cd.py  index.html  mkdocs.yml  objects.inv  openapi.json  pyproject.toml  sitemap.xml  test.py
.github/workflows/: docs.yml  publish.yml
api/advanced/: index.html
api/backtest/: index.html
api/client/: index.html
api/market-data/: index.html
api/models/: index.html
api/portfolio/: index.html
api/reference/: index.html
api/trading/: index.html
composer/: __init__.py  client.py  http_client.py
composer/models/: __init__.py
composer/models/accounts/: __init__.py  responses.py
composer/models/ai_agents/: __init__.py  responses.py
composer/models/backtest/: __init__.py  requests.py  responses.py  symphony.py
composer/models/cash/: __init__.py  responses.py
composer/models/common/: __init__.py  stats.py  symphony.py
composer/models/conversation/: __init__.py  requests.py  responses.py
composer/models/deploy/: __init__.py  responses.py
composer/models/dry_run/: __init__.py
composer/models/market_data/: __init__.py
composer/models/portfolio/: __init__.py  requests.py  responses.py
composer/models/reports/: __init__.py
composer/models/search/: __init__.py
composer/models/symphony/: __init__.py
composer/models/trading/: __init__.py
composer/models/user/: __init__.py  responses.py
composer/resources/: __init__.py  accounts.py  ai_agents.py  auth_management.py  backtest.py  cash.py  conversation.py  deploy.py  dry_run.py  market_data.py  portfolio.py  public_symphony.py  public_user.py  quotes.py  reports.py  search.py  symphony.py  trading.py  user.py  user_symphonies.py  user_symphony.py  watchlist.py
composer/utils/: __init__.py  symphony.py
docs/: index.md
docs/api/: advanced.md  backtest.md  client.md  market-data.md  models.md  portfolio.md  reference.md  trading.md
docs/examples/: account_holdings.md  account_returns.md  account_stats.md  backtest_dataframe.md  copy_symphony.md  create_symphony.md  create_symphony_blocks.md  grid_backtesting.md  place_market_order.md  portfolio_dataframe.md  preview_rebalance.md  quotes.md  rebalance_portfolio.md  remove_metadata.md  retry_config.md  search_symphonies.md  simple_backtest.md  symphony_correlation.md  symphony_holdings.md  symphony_live_vs_backtest.md  symphony_score.md  symphony_to_python.md  traded_symbols.md
examples/: account_holdings.ipynb  account_returns.ipynb  account_stats.ipynb  accounts_investor_documents.py  accounts_list_holdings.py  backtest_custom_symphony.py  copy_symphony.ipynb  create_symphony.ipynb  create_symphony_blocks.ipynb  deploy.py  dry_run.py  first_symphony_backtest.py  market_data.py  place_market_order.ipynb  portfolio_stats.py  preview_rebalance.ipynb  remove_metadata.ipynb  reports.py  run_backtest.py  search.py  search_symphonies.ipynb  simple_backtest.ipynb  symphony.py  symphony_correlation.ipynb  symphony_holdings.ipynb  symphony_live_vs_backtest.ipynb  symphony_score.ipynb  test.py  test_accounts_endpoints.py  test_backtest_endpoints.py  test_cash_endpoints.py  test_market_data_endpoints.py  test_new_endpoints.py  test_portfolio_endpoints.py  test_search_public_symphony.py  test_trading_order_endpoints.py  trading.py
examples/account_holdings/: index.html
examples/account_returns/: index.html
examples/account_stats/: index.html
examples/backtest_dataframe/: index.html
examples/copy_symphony/: index.html
examples/create_symphony/: index.html
examples/create_symphony_blocks/: index.html
examples/grid_backtesting/: index.html
examples/legacy/: backtest_custom_symphony.py  first_symphony_backtest.py  get_indicators.py  test.py  test_ai_agents_endpoints.py  test_auth_document_endpoints.py  test_conversation_endpoints.py  test_deploy_endpoints.py  test_new_endpoints.py  test_reports_endpoints.py  test_trading_endpoints.py  test_user_endpoints.py  test_watchlist_and_modify.py
examples/place_market_order/: index.html
examples/portfolio_dataframe/: index.html
examples/preview_rebalance/: index.html
examples/quotes/: index.html
examples/rebalance_portfolio/: index.html
examples/remove_metadata/: index.html
examples/retry_config/: index.html
examples/search_symphonies/: index.html
examples/simple_backtest/: index.html
examples/symphony_correlation/: index.html
examples/symphony_holdings/: index.html
examples/symphony_live_vs_backtest/: index.html
examples/symphony_score/: index.html
examples/symphony_to_python/: index.html
examples/traded_symbols/: index.html
search/: search_index.json
swagger-specs/: backtest-swagger.json  stagehand-swagger.json  trading-swagger.json
