[project]
name = "composer-trade-py"
version = "0.2.1"
authors = [
    {name = "SolarWolf", email = "git@solarwol.xyz"},
]
description = "Python SDK for Composer.Trade API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["trading", "finance", "api", "composer", "investment", "stocks", "algorithmic-trading"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.15.1",
    "pandas>=3.0.1",
    "httpx>=0.28.1",
]

[dependency-groups]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.25.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "hatch>=1.16.3",
    "twine>=6.2.0",
    "build>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/SolarWolf-Code/composer-trade-py"
Repository = "https://github.com/SolarWolf-Code/composer-trade-py"
Issues = "https://github.com/SolarWolf-Code/composer-trade-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["composer"]


[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
